# ChangeLog for sys-kernel/pf-sources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/pf-sources/ChangeLog,v 1.99 2013/07/01 22:10:54 wired Exp $

*pf-sources-3.9.5 (01 Jul 2013)

  01 Jul 2013; Alex Alexander <wired@gentoo.org> +pf-sources-3.9.5.ebuild:
  version bump

*pf-sources-3.9.4 (19 Jun 2013)

  19 Jun 2013; Alex Alexander <wired@gentoo.org> -pf-sources-3.8.1.ebuild,
  +pf-sources-3.9.4.ebuild:
  version bump, removed old

  09 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add upstream CPE tag (security info) from ChromiumOS.

*pf-sources-3.9.3 (23 May 2013)

  23 May 2013; Alex Alexander <wired@gentoo.org> +pf-sources-3.9.3.ebuild:
  version bump

*pf-sources-3.9.2 (13 May 2013)

  13 May 2013; Alex Alexander <wired@gentoo.org> +pf-sources-3.9.2.ebuild:
  version bump

*pf-sources-3.9.1 (08 May 2013)

  08 May 2013; Alex Alexander <wired@gentoo.org> +pf-sources-3.9.1.ebuild:
  version bump

*pf-sources-3.8.2 (07 Apr 2013)

  07 Apr 2013; Markos Chandras <hwoarang@gentoo.org> +pf-sources-3.8.2.ebuild:
  Version bump

*pf-sources-3.8.1 (16 Mar 2013)

  16 Mar 2013; Markos Chandras <hwoarang@gentoo.org> +pf-sources-3.8.1.ebuild,
  -pf-sources-3.6.11.ebuild, -pf-sources-3.7.1.ebuild, -pf-sources-3.7.2.ebuild,
  -pf-sources-3.7.3.ebuild, -pf-sources-3.7.4.ebuild:
  Version bump. Remove old

  09 Mar 2013; Tom Wijsman <TomWij@gentoo.org> pf-sources-2.6.31_p9.ebuild,
  pf-sources-2.6.32_p16.ebuild, pf-sources-2.6.33_p4.ebuild,
  pf-sources-2.6.34_p7.ebuild, pf-sources-2.6.35_p11.ebuild,
  pf-sources-2.6.36_p6.ebuild, pf-sources-2.6.37_p6.ebuild,
  pf-sources-2.6.38_p8.ebuild, pf-sources-2.6.39_p4.ebuild,
  pf-sources-3.0.7-r2.ebuild, pf-sources-3.1.6-r2.ebuild,
  pf-sources-3.2.7.ebuild, pf-sources-3.3.6.ebuild, pf-sources-3.4.6.ebuild,
  pf-sources-3.5.4.ebuild, pf-sources-3.6.11.ebuild, pf-sources-3.6.12.ebuild,