@@ -30,6 +30,7 @@ DIST linux-2.6.38.tar.xz 62085248 SHA256 f49b4e9f62026db2717c975728b3e90544a9f2c
 DIST linux-2.6.39.tar.xz 63250520 SHA256 d3a579104e0d3154727793f4fa79b6b882ddafeded73cc8c0eb8c2536ad77373 SHA512 2a61ac5a001f1939584fb65717fec557fa5fcc4bef6e295e07e64ae7f05e2a1540161c9baee8c0d42e533f59839cca56cf92c310929db43983a1843295515d90 WHIRLPOOL cd74d876108b767f2c8182381b3f7af5603a6512af5131421fcac22b4e59268b2c1a81aa9527e673430f3fed2ba61a17fcdef08cd6f516824529506936025469
 DIST linux-3.0.tar.xz 63798008 SHA256 ef5e8c2dedb20a6eab01bb379e9982cd7d47cf95bd87c9ee3e872272e85c24b6 SHA512 d1ce2369a8f6d73043b7cd992c47953c227afa591bca31e8d5ae8a549052cc2f70c035382332335ae9cf6af2d183cc88c3a41e7f0a582c7f493b8022f82816f5 WHIRLPOOL 0ea5069df287b2d86f148b59f38193ec40d5add585213bfac3efe4aa9e250ecea96017d9c54be6004894106049eac5e8fbef1d8605fd39441795d0c88c96a1c3
 DIST linux-3.1.tar.xz 64198228 SHA256 6f220258f3ce9f11d0e53860ccc2d9fe746117056212099876dbe5ee1de80af3 SHA512 620f411907a595504decf7e8944d017dad33ee2cb0a6c2155871a57b8da230d7f064d6cca2b0ebac983ce114d0288a62b272b28218a563c15c9c1052749ee3a3 WHIRLPOOL 36178e98b4df547c5a3c3f38394773256412f577eba44b1fca4f75f2bee0d714947c27ca8dae0912de4f5cca312a2aee0be8b9d76ecdce03ca6c1dfecd792026
+DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
 DIST linux-3.2.tar.xz 65065516 SHA256 dd96ed02b53fb5d57762e4b1f573460909de472ca588f81ec6660e4a172e7ba7 SHA512 77e9a52d78d6c8e951df1e166023eebe5defc5ef3c45d3ac84b613137b3c2e55cee5693d828ebd06c5034bd89ea2a5f862f55824f2b7839c9ad7212c81e3ecb0 WHIRLPOOL 7cc68baac4441740e2171fbbc4195ee6c0351de099aadaee8cb3487f6d1f8b7e1d3144ee54ba38dbd24d6be431a1ea3b921ffce82ff84df21a98da7bc61c1d17
 DIST linux-3.3.tar.xz 65859432 SHA256 355df2085626cdf0083c4bc0fe3017419034b6db5cce6f437ae8234a5e90b40c SHA512 9afb624c1fccd240e6609ede225ecf4c3de1a6f008e78a2f8540963ae9b1f1428d2e7368cc0066966cd358665b754ced9166470956da31002d6df2e3e5db86cd WHIRLPOOL 595fc8e548cffbc595a5a7bedbc26265e911c5d1f202f047a785e2f6b89d1b0f341c82e9415d97b43b73313649cac72eb1432ddc81aa77d1f31f30376b5091cc
 DIST linux-3.4.tar.xz 66748028 SHA256 ff3dee6a855873d12487a6f4070ec2f7996d073019171361c955639664baa0c6 SHA512 1c49b336750c9c2b49d21e54126f22a800367296be0d57e6df28b1532cbeba7fc3bdf4cfe27d9810576e76c2db2e9c2493f0804451c915137cb78d7aa61f236c WHIRLPOOL a36e62fe197ba7c08d498a79034da58091a94348f69542241067c9ebef683f86371b2c0a3b3fb6c4611e2fb885d9b74eee5c1f46a493c72dfb76c5665f0b8a6a
@@ -49,6 +50,7 @@ DIST patch-2.6.38-pf8.bz2 373278 SHA256 9067998dd697d8d4acc272c0f4fd400e93ea74cd
 DIST patch-2.6.39-pf4.bz2 351707 SHA256 c1e977b6b12dd5b0fc110bb2bd1dc98416e656bb95c445e0995182ad9766adbb SHA512 b2f5df76077e2ac328f3aee3fa2a3715e6d3056fc5d1e0d68381b769d67ae2e196ac44fdcb7f684c23bfb168eaeb17a8cffd02b4e45e952d66aed1d896941544 WHIRLPOOL 6986b78d35e021b795e2116fb3ea56b6d2d7bd2516e2d875ad30337427a6b7990be9788fa16eec5c5fc0cf411430917d94aefde30bdfeffd46a7cd2664defa0b
 DIST patch-3.0.7-pf.bz2 455906 SHA256 bde9041ee795eeddf56cb164d15355e0bf3b9ec996a8c4cbdbf8e30805e89340 SHA512 4517de33d135aefa3077f19b669b6b48cc3682c1e88acdbd392826bf1c9399a351f77d634b9d602844077a108e2fa925018ded7ddc2dc395b70aae003deda99d WHIRLPOOL 856e5e89aaacfc910bf9997159321e4b1f367b3ebd90486e629aae06f171ce6a533afcc72a97944f67c6345e97f51c70e69cf2bef4b06e18909780343dc7f2b7
 DIST patch-3.1.6-pf.bz2 424384 SHA256 bc7d0bcfa1a2fc6951dea5fa20f654e4f707cde0748e2d48a0b7b347e71e9faf SHA512 12eb1b9202dc5c649b7999f8bce3bcf8aae0b47a942665dc0c4d718d5432f762a5688c67da9ae19f7f503e9e7b7177c03a219c1d12fc2154be71f88f4e65ef66 WHIRLPOOL d99918cb085a175f89dee6af2e64f0739a1e9b85577a4d5507449ed1b2b06222809e2a0c073d706cafb86a8c1a8090a8ec3742f72ab244c0412794ca60fc89fd
+DIST patch-3.10.0-pf.bz2 398136 SHA256 e5e126a0afee75709c2e410014fa18f7b666bdadbeaa940568aa6b6c9ebf9f8c SHA512 9ac53bc46db67a9c64a56e8dc48349d5a8ee2474211c63a64efa192237798dd9ca27513abbf06014e7e17229f2285a3747fe013ce6d3285022e467b4e4fd207a WHIRLPOOL cb98f6a695ec236db4e519e41377129a7396cfa49148fa0c1ede7f2296db762741c29cd437bf13ead8d7d83ef1259827f2bf3a59b38e3fe20a5ba839b1af5fba
 DIST patch-3.2.7-pf.bz2 456810 SHA256 d657ad9afa1dd7aa3b2d09c5bd75adc409cb02ac64bb4ae143c9c63ec5d1b07d SHA512 3292720582a90a1102858e4c3eed64513b14d5f90da81fd58908970e273bc97875ea3ff023cc508cf0d5d2caa971f01f5f0624bca41f6be378a756448ca066c8 WHIRLPOOL 0551fc0487cefa99ec0179086fa6a522870eddfb265f249d791132a6a9833bc38cd5eebe6a6df8ea25cb6ba853ad3df6ff8f5e739d22f6c53ca075def9944345
 DIST patch-3.3.6-pf.bz2 462804 SHA256 ae3b6eb1aa940541f99e5b4d0286e4e5f56c6134c861c064bdf91d54cf38d262 SHA512 d56860e0e2a6a4bad22b578aa68512654356877d1bdf614ba1ccf50ca24cf9c59d71a0ccab60df2caac8d593982f82e5db09827649890cc263d53ad98784f413 WHIRLPOOL ebf6504f5863f3a5b134e63f994a6f1229c0955d1980d85c29f9125341d38155effbeb35a8222b8ebed3b1451082327fa6999b5c52c5b3f84404b551a8897806
 DIST patch-3.4.6-pf.bz2 440602 SHA256 5fc96dd1c1e9d3ac214ed322edf9798b406f1b1fc61db9e5d53fe10c1587ee19 SHA512 411d07a30302382ca2bfcc8b5d609c2f434d547ef85bced3bc39fc9a2cea0dec5ab147977edb12ebce96d4693fdbb965e1e48d5f406612f244f12f34118ebe12 WHIRLPOOL 4be07284041097a20f66b7cbbecb2de3e4bca62398aae0039c1623c9e1cf02d593290c6994455bfbd50079dc5ba7f2903456184b4d97969227f721f41ce8dfff
@@ -72,6 +74,7 @@ EBUILD pf-sources-2.6.38_p8.ebuild 1842 SHA256 bef4f02a250498123c9df474f19ea9292
 EBUILD pf-sources-2.6.39_p4.ebuild 1842 SHA256 8418bb8963d46e39ef0e05806fb9b831ff9fd441e8db36bcada973f70c9d5c85 SHA512 e79f6fbca8842eb290ff18bd78100cdfc5e7835dbfcb50ab9d539ac07db8fbbed41763d831b7a8f21acf28a94b42c1fc2c1d57264f636a000a366f090b69c2ee WHIRLPOOL 017db5e3f7bdae96e70118543142d950bd194ee6c75b201e7a5bc1751b83a3eeb699d4aaf35b10cc0086da7e57182d879b09b90688c244ef0486cce874ec9b85
 EBUILD pf-sources-3.0.7-r2.ebuild 1646 SHA256 aaf5ffa5f9dffc145fec0ae45fdce18aa048dce96930ce1d40d49b7c62e4154f SHA512 4f22425698dd7d42ea5eab52b09c6d7321d4169cfd99823e6fa1029a1bdd0385ba8515b3f999355d021c67aaf24b956d8fa0a80b4726417e62219559bf63e310 WHIRLPOOL f7986d5d5333cccfb863e4e00e82b0da1bcb161ae92c964b6793f29d7ec8c981c7b5c73808dbed274cafb1b85af6726587ae077b4e8475a50bc953d3bd216cfd
 EBUILD pf-sources-3.1.6-r2.ebuild 1701 SHA256 90167210fdeeabccb001e01d78d7ebb73e91ad68c08048f3413b51f3b663de01 SHA512 56a2dbcf8bdf60545cba64daed866c4b33a2168d1c02f15ef65f0317a6257db57f53eee798aacc71d5abf266ab4bc10c9ca4b68410a094c615f31b0e36f27b46 WHIRLPOOL 46ef5ff5931ab7d0af950884574b84c2362af7afc2aa0dd5e87010bc88e600e3e06251992d75e5bbc3050c9353214911a7dc428c21d1c81f43e23958b910967f
+EBUILD pf-sources-3.10.0.ebuild 2126 SHA256 9ff5c61f4c54fdeb87df80b44e8857640e51c79476b25d71f5d0f71c449ab329 SHA512 c473f14fe9a738936dd8420ef0ebc89400d2d37a22aaae7231872f530d107556f7dd067639b6d79673211b86a9dfdf1997a7d9247015d7c3c73dc32547018d8e WHIRLPOOL d0ab127bb197a427e2b607ab4a277fa6e00f0fd07e0faccf66093e9cd956c3765eef8142f260aea794cf53fef753b8635069ac298104a420008f9d1072405a62
 EBUILD pf-sources-3.2.7.ebuild 2042 SHA256 24a6a605be285d5e97e61a5f05588e8525bc41c6c57cbbb9a6390ec04ef21d5f SHA512 1779aafbb43bf7da7d9a7a6ef057b98d80573daca745413fa97657892b9d0f00378ae26d488f2ae170bd5cb6eb399480aaa95f0f8756be4a73a4f5a74b2c56b8 WHIRLPOOL 0702ddae0ec1d5cae7c32397598fde739cb55a4a0bdf038b62ea03134c8875d89c79c4ff2e08ecd0fc7be171baec011dc9d890ea2e65e47de07f9bec4e3952b1
 EBUILD pf-sources-3.3.6.ebuild 2042 SHA256 d715f72e50b2c70ab39174bc2348eec29bbb45fab9ad80336ba134952ffc3c62 SHA512 fd3efdd123067e3fdc88dbb23b60519e49887d5838d68725c98d51847f4909db55ca2f27a007826cd0a2432f46ad3d6bcf275dc31422e1911a81be0b6a81f733 WHIRLPOOL a5c90ae3c0d9cd775bc2d31fb7fbb7e9a5c3d2550896075262d77787df0a6234cebf3d5f1e03dc7b4fcef721d8f2f2f11a919ae55c13a7254af3cd7d4058e1be
 EBUILD pf-sources-3.4.6.ebuild 2042 SHA256 eb7368820f51ab018c330f17f5cff0e0034c3e4ae586e3124ca4aeaf2c61dbb1 SHA512 15bc54e8db999a307363cd3ea95a3cbad26561bee0b463afa57edd6f4a7a490ad33b4973275538655d2a3c29d20f4ddb82ddb6928b2f6703bb077f5c5dbde267 WHIRLPOOL 760c3b473c7bc5ed9a0f08c8c0a0214b1f87e8bb50d3edcb60c19a78fffeb1281a846da683d51ba88dcb13651f883385d1884217aa2b33a69f3037fed9b15851
@@ -84,22 +87,22 @@ EBUILD pf-sources-3.9.2.ebuild 2125 SHA256 6d82428ae179ba93e7c0372c684aca8225442
 EBUILD pf-sources-3.9.3.ebuild 2125 SHA256 30b13564016879fafd21cbbd4c9a307bddd6bd53a2258238af2f4dd12c00bf3e SHA512 ed5a6c4673ae10fbc0d0ed422b3adddf1a31cf74df2b41200d94f2542523618a0aeaefda5263f4ef1edf1abb684732fe2377079c221c6f1ced81b439f1457b7b WHIRLPOOL 087bad4cd7c11f4aab7a259e6de4f6b18c18fa16bec85e026b52003a73774ffafd3e1ea34348be4c1bb1de3346e7ffd567bfdb0f151ab8fb5824984e1881907f
 EBUILD pf-sources-3.9.4.ebuild 2125 SHA256 3d1893707698cfa55b8474e7780dab66a803b387238471e7c3ba40f71a9d7297 SHA512 02c65287bc1242de197ccba0b1cb67335b7a55109c9c4dc51e9d86d9eba38f107af325e0eebbf94c190ae3010a4068880f8fdb4ebf08a8f1ec50ef5114e55034 WHIRLPOOL 44cb37173685b795a6a660df851b30d5950859593c7dd17fc2f06b7b02f3dbe6c131e3660df2d5d50989dd4f922f9ef67b2c6546d2f677f2a4efb1c8d0236ea8
 EBUILD pf-sources-3.9.5.ebuild 2125 SHA256 ba25bcbb644f3b00ae3b26b73ed4c2f13d1b4ab32f6a36701fa070cbc2d7ef52 SHA512 f3909bec16e756971dcc05424f463d10510f01fccada19891b8e570fff2db242b450fc35477078e21c8e8c60c2726a7522f785a61eed79a9e2388c7204319e9e WHIRLPOOL 5e31b8d9d67abbac388fe1e0e4056767dd10dc2d4093ba465716ccfdcab3b516e6c6987d914310c634e13cd8da03da36d18d15e60ade0d22e156afebedb054c0
-MISC ChangeLog 17695 SHA256 dadf51ba6704fc96fbec667f3ed3230fd508a06a0677e1a40a4cf159aa275b43 SHA512 62674c97ee440917a574bdea427d56eb9ebeeaf88e68750bf5d6b62842eb9d6598a42493b1ec78154e5c1245405b1bdc979418df5a2500b9e0b05f179d7c0ce6 WHIRLPOOL 4dcce4d89752deb9377087502a98d0ff65945876ce21c336617a8752fe4d7e154a539a6c11c8021ae089230fb37c3a569e860fc278e1007cbe86b23c53a82e76
+MISC ChangeLog 17822 SHA256 11635c8e42d118087767527bb3bb64ca7626917686ff33ade89a30172e0452b2 SHA512 102697086327e65f98d8381e32691994ee5585fd136681559d2e296e46cdbff14dafe99c6a87822cd6653750c677a1c48b416daedf1d190a8391277ff4e39fca WHIRLPOOL b87dccc4d11fdff9f2e55f2b20f5d089fe698e47ac61af1513bac0f766206070f8ec8cd7e172f787eb89f06bc2bc2cb3dc2d1ec6f651be99ab1c1d0ea84c2e27
 MISC metadata.xml 703 SHA256 5b5eb3d39e52be2f0600c714043320b42b28db048628c3c984ddee2a83e6a16d SHA512 d43e0f6d459ec2f05a184b8fcae8216c960786f7358054ed29a0b14f3e662f345739f590916d0ced7f7759aeadbb7a67e0d921717df7eea81c676b50b6d538dc WHIRLPOOL 86c28dbc119d808f477092e52227a987f2047a8564ffffec96ae94f57b85c38f9b9bee32d7d6f8bebe247e3bee4c00b4c30b11b65d7b0cce644cf8060d88d20a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJR0f7bAAoJEDZF8K7rm0r6oEcP/A8xxipt6K+7YCzxLsQOXrWQ
-+pJCMc3W+nU2G4if6EQsI8ftPijf6Bl2o3ZzVOWa2afbj+BIgOl5ur1O6swHknQs
-c/Fh6azbF8BxpuM5PVuL0/SWhoQ6q9yRFvJyw5XfeUGd0Lo84gwdDvPed2uxZWT1
-ML6GhtJn1TQnR091vCxQa20ZpCdNcSWZvd87O9j4G0MOuGogswRopztO/vr7gwUH
-wXW6qC01G3/Dl4VhRcPyLMjEK2mxAOxMz+VvYMH9Cy+tSZsaneXK0luNoZmd1Eyg
-KH/GHNwBDfozpLbERxc0xLBer4+zkqaC73F1igY/GHcEPoVe0pgnUaV/IFggzekn
-thdjfKjRrZQbzwwZfVD9LV7cyuimT8Ir/hXUZTZ25FernBxnfhTOBCku76ZpFJxO
-m9nrjq8untOyeaCjXFA58JfV0BhfpKdQzOOVCwoCOhBOBGpUnpQIWuD9RIDYMiTZ
-3bSJZ7UkhXuZ570DEwxlWA3/RhfkQmy1ntgiYVGNh5WoBzMtLgO1jBQ/KylBRjzE
-Zj3dV1ChWxqSsQtN+CDzukHuTszSXcKn68OLnw05+Malql/v5t2u/jRNw2EpUv7S
-zX88eqkkRekH7CcYlPdYKpFCYYJR7gww3hJcwu6+OS3ypMgD8bu+zpXlDKv3iU20
-OyHfa/u1AqlnmKYFtDII
-=2saJ
+iQIcBAEBCAAGBQJR2XnuAAoJEDZF8K7rm0r6cb4P/2iClZGjCHSdYcPiifh4amIm
+3qE+EB7KGl2aICp5xinwzl48Sfie7ZBezQr36WfWuRl2N+ET7nyaq9t3ywc/jE3f
+lCaO3/9v1alCuoFTulb/k3913sB7JxK1utKoe76HxyRrAxkRMpQKiPqobc4mIO0q
+XMGQpa95aUOxPeHORIYf3izMPN5i6adZHKoDHjEP+6OIv/CRgsKHQk/ysjeWHCM/
+p60nRJT4Gifv+gUL5t3Va+aFVz3aT1xEtEoxfhbFRPJWHMEIvnBiFLqJODC601k3
+vGVULsWhEFmdiHBjztHtlPqAJnV5MdSloDeFrMv4IgMp7a+IWuEqbRcHgCK68K0+
+vHj13590W09qeeK/a9J2TPAvb/jcWsp+RdADlTUzoVs1aTwGfzWriJoqa31sMZb5
+zs4gXVvdP7HT7tS0Nsckzk/DslbptxkgXib/gVqVdTzOcrnkopbdeyhVit/OE1HC
+mtoRHgHDJnBY+0LVf1W0zjL5bdQusxcemugldom0Piv4OxZRY9sCTJNIhw6xFpgw
+gcBFE0ft/t9G4bJLfjvi0IJJcFdfSatf6gg2TaRvHByUOt6jn83wN9khdKyHBI/3
+a6eSkvck8gI135cgvI/UY9C3Ja3rzdcgsXAVr6oI7D5GKCZ3xmrYLcFYIwA8ucfy
+2hXPfBuMEN5t386aj685
+=X7xO
 -----END PGP SIGNATURE-----
